@@ -11,6 +11,7 @@ package org.sosy_lab.java_smt.solvers.cvc5;
 import static com.google.common.base.Preconditions.checkArgument;
 
 import com.google.common.base.Joiner;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
 import de.uni_freiburg.informatik.ultimate.logic.PrintTerm;
@@ -20,8 +21,8 @@ import io.github.cvc5.Sort;
 import io.github.cvc5.Term;
 import io.github.cvc5.TermManager;
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import org.sosy_lab.java_smt.api.Formula;
@@ -71,18 +72,28 @@ class CVC5FormulaManager extends AbstractFormulaManager<Term, Sort, TermManager,
   }
 
   @Override
-  public Term equalImpl(Collection<Term> pArgs) {
-    return getEnvironment().mkTerm(Kind.EQUAL, pArgs.toArray(new Term[0]));
+  public Term equalImpl(Iterable<Term> pArgs) {
+    Term[] array = ImmutableList.copyOf(pArgs).toArray(new Term[0]);
+    if (array.length < 2) {
+      return getEnvironment().mkTrue();
+    } else {
+      return getEnvironment().mkTerm(Kind.EQUAL, array);
+    }
   }
 
   @Override
-  public Term distinctImpl(Collection<Term> pArgs) {
-    return getEnvironment().mkTerm(Kind.DISTINCT, pArgs.toArray(new Term[0]));
+  public Term distinctImpl(Iterable<Term> pArgs) {
+    Term[] array = ImmutableList.copyOf(pArgs).toArray(new Term[0]);
+    if (array.length < 2) {
+      return getEnvironment().mkTrue();
+    } else {
+      return getEnvironment().mkTerm(Kind.DISTINCT, array);
+    }
   }
 
   @Override
-  public Term parseImpl(String smtQuery) throws IllegalArgumentException {
-    return new CVC5Parser(creator, this).parse(smtQuery);
+  protected List<Term> parseAllImpl(String smtQuery) throws IllegalArgumentException {
+    return new CVC5Parser(creator, this).parseAll(smtQuery);
   }
 
   @Override
@@ -142,9 +153,14 @@ class CVC5FormulaManager extends AbstractFormulaManager<Term, Sort, TermManager,
       // escaping is stolen from SMTInterpol, lets hope this remains consistent
       String qName = PrintTerm.quoteIdentifier(name);
       String args = Joiner.on(" ").join(childrenTypes);
-      declarations.append(String.format("(declare-fun %s (%s) %s)%n", qName, args, returnType));
+      declarations.append("(declare-fun %s (%s) %s)%n".formatted(qName, args, returnType));
     }
     return declarations;
+  }
+
+  @Override
+  protected Term simplify(Term f) throws InterruptedException {
+    return creator.getSolver().simplify(f);
   }
 
   @Override
